Closed Bug 435010 Opened 16 years ago Closed 16 years ago

Printing to PDF broken on OS/2

Categories

(Core Graveyard :: Widget: OS/2, defect)

x86
OS/2
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: mozilla)

Details

Attachments

(1 file)

It appears that since bug 409953 printing to PDF is broken on OS/2. Because now the return value is actually used, we should return NS_OK from nsDeviceContextSpecOS2::BeginDocument and related methods if we are printing to PDF.

This is especially important because for the moment I want to use PDF output always as printing to normal printers is still broken on OS/2 (bug 415522).
Attached patch this worksSplinter Review
While the return code of EndDocument() isn't checked in nsThebesDeviceContext, I still added the same check as for the Begin* functions for completeness.

Will check this into trunk tomorrow or so.
Assignee: mozilla → mozilla
Status: NEW → ASSIGNED
Fix checked into CVS trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: