[OS/2] Bug 435010: fix printing to PDF